--- a/app.json
+++ b/app.json
@@ -21,6 +21,11 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "packagerOpts": {
+      "assetExts": [
+        "html"
+      ]
+    },
     "ios": {
       "supportsTablet": true
     }
