--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@types/color-convert": "^1.9.0",
+    "@types/gl-matrix": "^2.4.5",
+    "color-convert": "^2.0.1",
+    "color-parse": "^1.3.8",
     "expo": "~37.0.3",
+    "expo-file-system": "~8.1.0",
+    "expo-gl": "~8.1.0",
+    "gl-matrix": "^3.3.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
+    "react-native-status-bar-height": "^2.5.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "8.1.1",
+    "webgl-debug": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
