--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@types/base-64": "^0.1.3",
     "@types/color-convert": "^1.9.0",
     "@types/gl-matrix": "^2.4.5",
     "@types/react-redux": "^7.1.9",
+    "base-64": "^0.1.0",
     "color-convert": "^2.0.1",
     "color-parse": "^1.3.8",
     "expo": "~37.0.3",
