--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-webview": "8.1.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "reselect": "^4.0.0",
     "webgl-debug": "^2.0.1"
   },
   "devDependencies": {
