--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
-    "webgl-debug": "^2.0.1"
+    "webgl-debug": "^2.0.1",
+    "react-native-gesture-handler": "~1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
