--- a/package.json
+++ b/package.json
@@ -15,30 +15,31 @@
     "base-64": "^0.1.0",
     "color-convert": "^2.0.1",
     "color-parse": "^1.3.8",
-    "expo": "~37.0.3",
-    "expo-file-system": "~8.1.0",
-    "expo-gl": "~8.1.0",
+    "expo": "^38.0.0",
+    "expo-file-system": "~9.0.1",
+    "expo-gl": "~8.3.1",
+    "expo-pixi": "^1.2.0",
     "gl-matrix": "^3.3.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-screens": "~2.2.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-screens": "~2.9.0",
     "react-native-status-bar-height": "^2.5.0",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "8.1.1",
+    "react-native-webview": "9.4.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
-    "webgl-debug": "^2.0.1",
-    "react-native-gesture-handler": "~1.6.0"
+    "webgl-debug": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.17",
-    "babel-preset-expo": "~8.1.0",
-    "typescript": "~3.8.3"
+    "@types/react": "~16.9.41",
+    "@types/react-native": "~0.62.13",
+    "babel-preset-expo": "^8.2.3",
+    "typescript": "~3.9.5"
   },
   "private": true
 }
